--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,39 @@
+@import url('https://fonts.googleapis.com/css?family=Charmonman:700');
+$color:#000000;
 body{
-    background:red;
+    margin:0;
+}
+section{
+    text-align:center;
+    background-image:url("https://images.unsplash.com/photo-1543954496-f56252e0c408?ixlib=rb-1.2.1&auto=format&fit=crop&w=988&q=80");
+    margin:0;
+    padding:50px;
+    background-size:cover;
+    background-position: center center;
+    h1{
+        margin:0;
+        color:$color;
+        font-family: 'Charmonman', cursive;
+        font-weight:700;
+    }
+}
+
+main {
+    color:red;
+    border: 1px solid red;
+    position: relative;
+    width:400px;
+    margin:0 auto;
+}
+.div-1, .div-2{
+    border:1px solid aqua;
+    margin:10px;
+    float: left;
+}
+.div-3{
+    border:1px solid aqua;
+    clear: both;
+    width: 100px;
+    margin:0 auto;
+    text-align: center;
 }
