--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,7 +11,7 @@ section{
     background-size:cover;
     background-position: center center;
     h1{
-        margin:0;
+        //margin:0;
         color:$color;
         font-family: 'Charmonman', cursive;
         font-weight:700;
