--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,7 @@ main {
     color:red;
     border: 1px solid red;
     position: relative;
-    width:400px;
+    max-width:400px;
     margin:0 auto;
 }
 .div-1, .div-2{
