--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Charmonman:700');
 body{
     margin:0;
+    font-family:Arial, Helvetica, sans-serif; //new
+    line-height: 175%;//new
 }
 section{
     text-align:center;
@@ -16,23 +18,16 @@ section{
         color:#208a47;
     }
 }
-
-main {
-    color:red;
-    border: 1px solid red;
+main{
+    color:#4a4a4a; //new
+    //border: 1px solid red;
     position: relative;
-    max-width:400px;
+    max-width:1200px; //new
     margin:0 auto;
+    display: flex;//new
+    margin-top:50px; //new
 }
-.div-1, .div-2{
-    border:1px solid aqua;
+.div-1, .div-2, .div-3{
+    //border:1px solid aqua;
     margin:10px;
-    float: left;
-}
-.div-3{
-    border:1px solid aqua;
-    clear: both;
-    width: 100px;
-    margin:0 auto;
-    text-align: center;
 }
