--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Charmonman:700");
 body {
-  margin: 0; }
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 175%; }
 
 section {
   text-align: center;
@@ -16,20 +18,12 @@ section {
     color: #208a47; }
 
 main {
-  color: red;
-  border: 1px solid red;
+  color: #4a4a4a;
   position: relative;
-  width: 400px;
-  margin: 0 auto; }
-
-.div-1, .div-2 {
-  border: 1px solid aqua;
-  margin: 10px;
-  float: left; }
-
-.div-3 {
-  border: 1px solid aqua;
-  clear: both;
-  width: 100px;
+  max-width: 1200px;
   margin: 0 auto;
-  text-align: center; }
+  display: flex;
+  margin-top: 50px; }
+
+.div-1, .div-2, .div-3 {
+  margin: 10px; }
