--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Charmonman:700');
 body{
     margin:0;
-    font-family:Arial, Helvetica, sans-serif; //new
-    line-height: 175%;//new
+    font-family:Arial, Helvetica, sans-serif;
+    line-height: 175%;
 }
 section{
     text-align:center;
@@ -19,15 +19,17 @@ section{
     }
 }
 main{
-    color:#4a4a4a; //new
-    //border: 1px solid red;
+    color:#4a4a4a;
     position: relative;
-    max-width:1200px; //new
+    max-width:1200px;
     margin:0 auto;
-    display: flex;//new
-    margin-top:50px; //new
+    display: flex;
+    margin-top:50px;
+    flex-direction: column; //new
+    @media only screen and (min-width: 768px)  { //new
+        flex-direction: row; //new
+    }//new
 }
 .div-1, .div-2, .div-3{
-    //border:1px solid aqua;
     margin:10px;
 }
