--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,17 @@ main {
   display: flex;
   margin-top: 50px;
   flex-direction: column; }
+  main.reverse {
+    flex-direction: column-reverse; }
   @media only screen and (min-width: 768px) {
     main {
-      flex-direction: row; } }
+      flex-direction: row; }
+      main.reverse {
+        flex-direction: row-reverse; } }
 
 .div-1, .div-2, .div-3 {
   margin: 10px; }
+
+.button-wrapper {
+  text-align: center;
+  margin-top: 25px; }
