--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,11 +25,21 @@ main{
     margin:0 auto;
     display: flex;
     margin-top:50px;
-    flex-direction: column; //new
-    @media only screen and (min-width: 768px)  { //new
-        flex-direction: row; //new
-    }//new
+    flex-direction: column;
+    &.reverse{ //new
+        flex-direction: column-reverse; //new
+    } //new
+    @media only screen and (min-width: 768px)  {
+        flex-direction: row;
+        &.reverse{ //new
+            flex-direction: row-reverse; //new
+        } //new
+    }
 }
 .div-1, .div-2, .div-3{
     margin:10px;
 }
+.button-wrapper{ //new
+    text-align: center; //new
+    margin-top: 25px;
+}//new
